--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,16 +10,21 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".createActivity"
-            android:label="@string/title_activity_create"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
-        <activity android:name=".BaseActivity" />
-        <activity android:name=".MainActivity">
+            android:name=".ListActivity"
+            android:label="@string/title_activity_list"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".createActivity"
+            android:label="@string/title_activity_create"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".BaseActivity" />
+        <activity android:name=".MainActivity">
         </activity>
     </application>
 
