--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".ListActivity"
+            android:launchMode="singleTask"
             android:label="@string/title_activity_list"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -21,6 +22,7 @@
         </activity>
         <activity
             android:name=".createActivity"
+            android:launchMode="singleTask"
             android:label="@string/title_activity_create"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".BaseActivity" />
